--- a/config/config.php.template
+++ b/config/config.php.template
@@ -2,7 +2,7 @@
 
 date_default_timezone_set('America/Detroit');
 
-$sharedPathDepth = (basename(__DIR__) === 'scripts') ? '../../../shared' : '../../shared';
+$sharedPathDepth = (basename(__DIR__) === 'scripts' || basename(__DIR__) === 'api') ? '../../../shared' : '../../shared';
 $config['sharedpath'] = __DIR__ . '/' . $sharedPathDepth;
 
 // Database configuration
