chore: update composer configuration and dependencies

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "config": {
         "vendor-dir": "../vendor"
     },
+    "license": "proprietary",
     "name": "sjones/homeio",
     "description": "HomeIO roject",
     "type": "project",
