--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     },
     "license": "proprietary",
     "name": "sjones/homeio",
-    "description": "HomeIO roject",
+    "description": "HomeIO project",
     "type": "project",
     "require": {
         "phpmailer/phpmailer": "^6.9"
