--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "description": "HomeIO project",
     "type": "project",
     "require": {
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "slim/slim": "^4.0",
+        "slim/psr7": "^1.6"
     },
     "authors": [
         {
