--- a/config/config.php.template
+++ b/config/config.php.template
@@ -13,6 +13,12 @@ $config['db_config'] = [
     'password' => 'your_db_password'
 ];
 
+$config['api_keys'] = [ // keys allowed to access apis
+    'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx' // homeio - needs to match $config['homeio_api_key']
+];
+
+$config['homeio_api_key'] = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'; // key used by homeio to access apis
+
 $config['govee_api_key'] = 'your_govee_api_key';
 $config['govee_api_url'] = 'https://developer-api.govee.com/v1/devices';
 
