--- a/config/config.php.template
+++ b/config/config.php.template
@@ -5,6 +5,9 @@ date_default_timezone_set('America/Detroit');
 $sharedPathDepth = (basename(__DIR__) === 'scripts' || basename(__DIR__) === 'api') ? '../../../shared' : '../../shared';
 $config['sharedpath'] = __DIR__ . '/' . $sharedPathDepth;
 
+$config['base_url'] = 'https://xxxxxxxxxxxx.com/homeio/';
+$config['api_url'] = 'https://xxxxxxxxxxxx.com/homeio/api/';
+
 // Database configuration
 $config['db_config'] = [
     'host' => 'localhost',
