--- a/.htaccess
+++ b/.htaccess
@@ -1,29 +1,73 @@
-# Deny access to all files by default
-#<FilesMatch "^.*$">
-    #Order Allow,Deny
-    #Deny from all
-#</FilesMatch>
+# Root .htaccess file for HomeIO
 
-# Allow access only to PHP files
-<FilesMatch "\.php$">
-    Order Allow,Deny
-    Allow from all
-</FilesMatch>
+# Enable the rewrite engine
+RewriteEngine On
 
-# Protect against viewing hidden files
-<FilesMatch "^\.">
-    Order Allow,Deny
-    Deny from all
-</FilesMatch>
+# Force HTTPS
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Set security headers
+<IfModule mod_headers.c>
+    # Prevent clickjacking
+    Header always set X-Frame-Options "SAMEORIGIN"
+    # Prevent MIME-type sniffing
+    Header always set X-Content-Type-Options "nosniff"
+    # Enable XSS protection in browsers
+    Header always set X-XSS-Protection "1; mode=block"
+    # Control resource loading
+    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com; img-src 'self' data:;"
+    # Enable strict transport security
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+</IfModule>
+
+# Prevent directory listing
+Options -Indexes
 
 # Protect sensitive files
-<FilesMatch "^(composer\.json|composer\.lock|README\.md|\.)">
-    Order Allow,Deny
+<FilesMatch "^\.">
+    Order allow,deny
     Deny from all
 </FilesMatch>
 
-# Protect config and logs directories
-<FilesMatch "^(config|logs)/">
-    Order Allow,Deny
+<FilesMatch "(^#.*#|\.(bak|config|sql|db|json|log|sh|inc|orig|dist|ini|in|tpl))$">
+    Order allow,deny
     Deny from all
 </FilesMatch>
+
+# Set default document
+DirectoryIndex index.php
+
+# Custom error pages
+ErrorDocument 404 /homeio/error.php?code=404
+ErrorDocument 403 /homeio/error.php?code=403
+ErrorDocument 500 /homeio/error.php?code=500
+
+# PHP settings
+<IfModule mod_php7.c>
+    php_flag display_errors Off
+    php_value max_execution_time 300
+    php_value memory_limit 128M
+    php_value post_max_size 20M
+    php_value upload_max_filesize 10M
+</IfModule>
+
+# Cache control for static assets
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
+    ExpiresByType text/css "access plus 1 week"
+    ExpiresByType text/javascript "access plus 1 week"
+    ExpiresByType application/javascript "access plus 1 week"
+    ExpiresByType application/x-javascript "access plus 1 week"
+    ExpiresByType image/x-icon "access plus 1 year"
+</IfModule>
+
+<IfModule mod_deflate.c>
+    # Enable compression
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
+</IfModule>
